--- a/.gitignore
+++ b/.gitignore
@@ -16,12 +16,12 @@
 # Mono auto generated files
 mono_crash.*
 
+Dimensio.5cead6d9/
+
 # Build results
-[Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
-x64/
 x86/
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
