--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,7 @@ mono_crash.*
 
 Dimensio.5cead6d9/
 gamelevels/
-SDL21DLS quick level editor/gamelevels/
+SDL21DLS quick level editor/levels/
 sprites/
 
 # Build results
