--- a/Dimension Less Shooter.vcxproj
+++ b/Dimension Less Shooter.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Render.cpp" />
     <ClCompile Include="SDLstuff.cpp" />
+    <ClCompile Include="UI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Collision.h" />
@@ -153,6 +154,7 @@
     <ClInclude Include="Render.h" />
     <ClInclude Include="SDLstuff.h" />
     <ClInclude Include="Structs.h" />
+    <ClInclude Include="UI.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
