--- a/SDL21DLS quick level editor/SDL21DLS quick level editor.vcxproj.filters
+++ b/SDL21DLS quick level editor/SDL21DLS quick level editor.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="..\SDLstuff.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\UI.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="mainblock.h">
